syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
package collector;

service CollectorServer {
  rpc SendMetrics (stream CollectorMetrics) returns (Reply) {}
  rpc RegisterMetrics (CollectorMetrics) returns (Reply) {}
}

message CollectorMetrics {
    optional string namespace = 1;
    map <string, string> labels = 2;
    map <string, uint64> metrics = 3;
}

message Reply {
  string message = 1;
}